compiler/acton/test/typeerrors/ex22.act
f : [A(Plus)] => (A) -> A

def f(x,y):
    return x
